# milton

./: .gitignore  README.md  __init__.py  _setup.py  aux.py  cfg.py  err.py  md.py  mid.py  midi.py  midutil.py  pyproject.toml  requirements.txt  rtmid.py  setup.py  util.py  utils.py
computil/: __init__.py  common.py  cu.py  cumidiutil.py  cumido.py  mu.py  realtime.py  rt.py  utils.py
cu/: __init__.py  aux.py  cfg.py  common.py  midutil.py  mu.py  rt.py  rtmid.py
etude/: misc.py  piano_phase.py  spectral_canon.py
src/: __init__.py  cfg.py  realtime.py  utils.py
src/computil.egg-info/: PKG-INFO  SOURCES.txt
src/milton/: __init__.py  err.py  realtime.py  utils.py
tests/: piano_phase.py
